--- a/apps/web-with-auth/src/app/globals.css
+++ b/apps/web-with-auth/src/app/globals.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@source "../../node_modules/@repo/better-auth-ui";
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
